Methods canBeApplied, hasImpactOnNetwork and isCompatibleWith do not exist in core action, so they are moved out of elementary action Remove network elements from elementary action since core remedial action do not have network element(s)
Signed-off-by: Pauline Jean-Marie <pauline.jean-marie@artelys.com>